[Qt] [WK2] Webkit fails to link when compiled with force_static_libs_as_shared https://bugs.webkit.org/show_bug.cgi?id=80524

Reviewed by Simon Hausmann.

Move IdentifierTable methods defintion to WTFThreadData.cpp to fix linking
of WTF library.

* runtime/Identifier.cpp:
* wtf/WTFThreadData.cpp:
(JSC):
(JSC::IdentifierTable::~IdentifierTable):
(JSC::IdentifierTable::add):


Canonical link: https://commits.webkit.org/97763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110158 268f45cc-cd09-0410-ab3c-d52691b4dbfc